--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
+body{
+  background-color: black;
+}
+.headingOne{
+font-family:'Courier New', Courier, monospace;
+font-size: 100px;
+}
+.headingTwo{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 100px;
+  color:rgb(19, 134, 205);
+}
 .App {
   text-align: center;
+  background-color: black;
+  color: whitesmoke
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-field {
+  padding: 10px;
+  margin-right: 25px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 200px;
+  box-sizing: border-box;
+  outline: none;
+  transition: border-color 0.3s ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* CSS for when the input field is focused */
+.input-field:focus {
+  border-color: dodgerblue;
+  box-shadow: 0 0 10px dodgerblue;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* CSS for the button */
+.my-button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: rgb(19, 134, 205);
   color: white;
+  border: none;
+  border-color: dodgerblue;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+/* CSS for the button when hovered */
+.my-button:hover {
+  background-color: dodgerblue;
+  color:black
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.validage{
+  font-size: 70px;
+  font-family:'Courier New', Courier, monospace;
+}
+
+.age{
+  font-size: 70px;
+  color:rgb(19, 134, 205);
+  font-family:'Courier New', Courier, monospace;
+}
+
+.invalidage{
+  font-size: 70px;
+  font-family:'Courier New', Courier, monospace;
 }
